@@ -29,68 +29,68 @@ KAtlasControl::KAtlasControl(QWidget *parent)
 
     // Create the Model (Globe) and one view.
     m_globe = new KAtlasGlobe( this );
-    m_katlasview = new KAtlasView( m_globe, this );
-    m_katlasview->setSizePolicy( QSizePolicy( QSizePolicy::MinimumExpanding,
-					      QSizePolicy::MinimumExpanding ) );
-    m_katlasview->setMinimumZoom( m_toolbox->minimumZoom() );
+    m_marbleWidget = new MarbleWidget( m_globe, this );
+    m_marbleWidget->setSizePolicy( QSizePolicy( QSizePolicy::MinimumExpanding,
+                                                QSizePolicy::MinimumExpanding ) );
+    m_marbleWidget->setMinimumZoom( m_toolbox->minimumZoom() );
 
     QVBoxLayout *vlayout = new QVBoxLayout( this );
 
     QHBoxLayout *hlayout = new QHBoxLayout();	
 
     hlayout->addWidget( m_toolbox );
-    hlayout->addWidget( m_katlasview );
+    hlayout->addWidget( m_marbleWidget );
     vlayout->addLayout( hlayout );
 
-    m_toolbox->setLocations( m_katlasview->placeMarkModel() );
+    m_toolbox->setLocations( m_marbleWidget->placeMarkModel() );
 
-    connect(m_toolbox, SIGNAL(goHome()),         m_katlasview, SLOT(goHome()));
-    connect(m_toolbox, SIGNAL(zoomChanged(int)), m_katlasview, SLOT(zoomView(int)));
-    connect(m_toolbox, SIGNAL(zoomIn()),  m_katlasview, SLOT(zoomIn()));
-    connect(m_toolbox, SIGNAL(zoomOut()), m_katlasview, SLOT(zoomOut()));
+    connect(m_toolbox, SIGNAL(goHome()),         m_marbleWidget, SLOT(goHome()));
+    connect(m_toolbox, SIGNAL(zoomChanged(int)), m_marbleWidget, SLOT(zoomView(int)));
+    connect(m_toolbox, SIGNAL(zoomIn()),  m_marbleWidget, SLOT(zoomIn()));
+    connect(m_toolbox, SIGNAL(zoomOut()), m_marbleWidget, SLOT(zoomOut()));
 
-    connect(m_toolbox, SIGNAL(moveLeft()),  m_katlasview, SLOT(moveLeft()));
-    connect(m_toolbox, SIGNAL(moveRight()), m_katlasview, SLOT(moveRight()));
-    connect(m_toolbox, SIGNAL(moveUp()),    m_katlasview, SLOT(moveUp()));
-    connect(m_toolbox, SIGNAL(moveDown()),  m_katlasview, SLOT(moveDown()));
+    connect(m_toolbox, SIGNAL(moveLeft()),  m_marbleWidget, SLOT(moveLeft()));
+    connect(m_toolbox, SIGNAL(moveRight()), m_marbleWidget, SLOT(moveRight()));
+    connect(m_toolbox, SIGNAL(moveUp()),    m_marbleWidget, SLOT(moveUp()));
+    connect(m_toolbox, SIGNAL(moveDown()),  m_marbleWidget, SLOT(moveDown()));
 
-    connect(m_katlasview, SIGNAL(zoomChanged(int)), 
-	    m_toolbox,    SLOT(changeZoom(int)));
-    connect(m_toolbox,    SIGNAL(centerOn(const QModelIndex&)),
-	    m_katlasview, SLOT(centerOn(const QModelIndex&)));
-    connect(m_toolbox,    SIGNAL(selectMapTheme(const QString&)),
-	    m_katlasview, SLOT(setMapTheme(const QString&)));
+    connect(m_marbleWidget, SIGNAL(zoomChanged(int)), 
+	    m_toolbox,      SLOT(changeZoom(int)));
+    connect(m_toolbox,      SIGNAL(centerOn(const QModelIndex&)),
+	    m_marbleWidget, SLOT(centerOn(const QModelIndex&)));
+    connect(m_toolbox,      SIGNAL(selectMapTheme(const QString&)),
+	    m_marbleWidget, SLOT(setMapTheme(const QString&)));
 }
 
 
 void KAtlasControl::zoomIn()
 {
-    m_katlasview->zoomIn();
+    m_marbleWidget->zoomIn();
 }
 
 void KAtlasControl::zoomOut()
 {
-    m_katlasview->zoomOut();
+    m_marbleWidget->zoomOut();
 }
 
 void KAtlasControl::moveLeft()
 {
-    m_katlasview->moveLeft();
+    m_marbleWidget->moveLeft();
 }
 
 void KAtlasControl::moveRight()
 {
-    m_katlasview->moveRight();
+    m_marbleWidget->moveRight();
 }
 
 void KAtlasControl::moveUp()
 {
-    m_katlasview->moveUp();
+    m_marbleWidget->moveUp();
 }
 
 void KAtlasControl::moveDown()
 {
-    m_katlasview->moveDown();
+    m_marbleWidget->moveDown();
 }
 
 
